ci(*): add husky to run lint and type-check

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:eslint": "eslint . --fix",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "preview": "vite preview",
-    "type-check": "vue-tsc --build"
+    "type-check": "vue-tsc --build",
+    "prepare": "husky"
   },
   "dependencies": {
     "pinia": "^3.0.1",
@@ -31,6 +32,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-oxlint": "^0.16.0",
     "eslint-plugin-vue": "~10.0.0",
+    "husky": "^9.1.7",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
